Call WebStateObserver::PageLoaded after loading placeholder URL.

Before this CL PageLoaded was called right from
didFailProvisionalNavigation:, where URL may still represent the
previous page.

Bug: 903497
Change-Id: I712dd120340353f37d2fe739c5b05e843cb11d7a
Reviewed-on: https://chromium-review.googlesource.com/c/1327608
Reviewed-by: Danyao Wang <danyao@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606855}
Former-commit-id: 386114b5bacc02e12b584786671d67b6080f02e7